--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "netlify deploy"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.6",
     "@astrojs/react": "^4.2.7",
     "@headlessui/react": "^2.2.3",
     "@tailwindcss/vite": "^4.1.3",
-    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.7.13",
-    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
